@@ -4,7 +4,6 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -75,7 +74,7 @@ public class XmpExporterTest {
 
         BibEntry entryArmbrust = new BibEntry();
         entryArmbrust.setField(StandardField.AUTHOR, "Michael Armbrust");
-        entryArmbrust.setCiteKey("Armbrust2010");
+        entryArmbrust.setCitationKey("Armbrust2010");
 
         exporter.export(databaseContext, file, encoding, Arrays.asList(entryTuring, entryArmbrust));
 
@@ -103,7 +102,7 @@ public class XmpExporterTest {
                 "      </dc:creator>\n" +
                 "      <dc:relation>\n" +
                 "        <rdf:Bag>\n" +
-                "          <rdf:li>bibtex/bibtexkey/Armbrust2010</rdf:li>\n" +
+                "          <rdf:li>bibtex/citationkey/Armbrust2010</rdf:li>\n" +
                 "        </rdf:Bag>\n" +
                 "      </dc:relation>\n" +
                 "      <dc:format>application/pdf</dc:format>\n" +
@@ -128,14 +127,14 @@ public class XmpExporterTest {
 
         BibEntry entryArmbrust = new BibEntry()
                 .withField(StandardField.AUTHOR, "Michael Armbrust")
-                .withCiteKey("Armbrust2010");
+                .withCitationKey("Armbrust2010");
 
         exporter.export(databaseContext, file, encoding, List.of(entryTuring, entryArmbrust));
 
         List<String> lines = Files.readAllLines(file);
         assertEquals(Collections.emptyList(), lines);
 
-        Path fileTuring = Paths.get(file.getParent().toString(), entryTuring.getId() + "_null.xmp");
+        Path fileTuring = Path.of(file.getParent().toString(), entryTuring.getId() + "_null.xmp");
         String actualTuring = String.join("\n", Files.readAllLines(fileTuring)); // we are using \n to join, so we need it in the expected string as well, \r\n would fail
 
         String expectedTuring = "  <rdf:RDF xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n" +
@@ -156,7 +155,7 @@ public class XmpExporterTest {
 
         assertEquals(expectedTuring, actualTuring);
 
-        Path fileArmbrust = Paths.get(file.getParent().toString(), entryArmbrust.getId() + "_Armbrust2010.xmp");
+        Path fileArmbrust = Path.of(file.getParent().toString(), entryArmbrust.getId() + "_Armbrust2010.xmp");
         String actualArmbrust = String.join("\n", Files.readAllLines(fileArmbrust)); // we are using \n to join, so we need it in the expected string as well, \r\n would fail
 
         String expectedArmbrust = "  <rdf:RDF xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n" +
@@ -168,7 +167,7 @@ public class XmpExporterTest {
                 "      </dc:creator>\n" +
                 "      <dc:relation>\n" +
                 "        <rdf:Bag>\n" +
-                "          <rdf:li>bibtex/bibtexkey/Armbrust2010</rdf:li>\n" +
+                "          <rdf:li>bibtex/citationkey/Armbrust2010</rdf:li>\n" +
                 "        </rdf:Bag>\n" +
                 "      </dc:relation>\n" +
                 "      <dc:format>application/pdf</dc:format>\n" +
@@ -186,7 +185,7 @@ public class XmpExporterTest {
     @Test
     public void exportSingleEntryWithPrivacyFilter(@TempDir Path testFolder) throws Exception {
         when(xmpPreferences.getXmpPrivacyFilter()).thenReturn(Collections.singleton(StandardField.AUTHOR));
-        when(xmpPreferences.isUseXMPPrivacyFilter()).thenReturn(true);
+        when(xmpPreferences.shouldUseXmpPrivacyFilter()).thenReturn(true);
 
         Path file = testFolder.resolve("ThisIsARandomlyNamedFile");
         Files.createFile(file);
