@@ -1,7 +1,7 @@
 package org.jabref.logic.util.io;
 
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 
@@ -16,18 +16,18 @@ import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class RegExpBasedFileFinderTests {
+class RegExpBasedFileFinderTests {
 
     private static final String FILES_DIRECTORY = "src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder";
     private BibDatabase database;
     private BibEntry entry;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
 
         entry = new BibEntry();
         entry.setType(StandardEntryType.Article);
-        entry.setCiteKey("HipKro03");
+        entry.setCitationKey("HipKro03");
         entry.setField(StandardField.AUTHOR, "Eric von Hippel and Georg von Krogh");
         entry.setField(StandardField.TITLE, "Open Source Software and the \"Private-Collective\" Innovation Model: Issues for Organization Science");
         entry.setField(StandardField.JOURNAL, "Organization Science");
@@ -45,94 +45,97 @@ public class RegExpBasedFileFinderTests {
     }
 
     @Test
-    public void testFindFiles() throws Exception {
+    void testFindFiles() throws Exception {
         // given
         BibEntry localEntry = new BibEntry(StandardEntryType.Article);
-        localEntry.setCiteKey("pdfInDatabase");
+        localEntry.setCitationKey("pdfInDatabase");
         localEntry.setField(StandardField.YEAR, "2001");
 
         List<String> extensions = Collections.singletonList("pdf");
 
-        List<Path> dirs = Collections.singletonList(Paths.get(FILES_DIRECTORY));
-        RegExpBasedFileFinder fileFinder = new RegExpBasedFileFinder("**/[bibtexkey].*\\\\.[extension]", ',');
+        List<Path> dirs = Collections.singletonList(Path.of(FILES_DIRECTORY));
+        RegExpBasedFileFinder fileFinder = new RegExpBasedFileFinder("**/[citationkey].*\\\\.[extension]", ',');
 
         // when
         List<Path> result = fileFinder.findAssociatedFiles(localEntry, dirs, extensions);
 
         // then
-        assertEquals(Collections.singletonList(Paths.get("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/pdfInDatabase.pdf")),
+        assertEquals(Collections.singletonList(Path.of("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/pdfInDatabase.pdf")),
                 result);
     }
 
     @Test
-    public void testYearAuthFirspageFindFiles() throws Exception {
+    void testYearAuthFirstPageFindFiles() throws Exception {
         // given
         List<String> extensions = Collections.singletonList("pdf");
 
-        List<Path> dirs = Collections.singletonList(Paths.get(FILES_DIRECTORY));
+        List<Path> dirs = Collections.singletonList(Path.of(FILES_DIRECTORY));
         RegExpBasedFileFinder fileFinder = new RegExpBasedFileFinder("**/[year]_[auth]_[firstpage].*\\\\.[extension]", ',');
 
         // when
         List<Path> result = fileFinder.findAssociatedFiles(entry, dirs, extensions);
 
         // then
-        assertEquals(Collections.singletonList(Paths.get("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/directory/subdirectory/2003_Hippel_209.pdf")),
+        assertEquals(Collections.singletonList(Path.of("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/directory/subdirectory/2003_Hippel_209.pdf")),
                 result);
     }
 
     @Test
-    public void testAuthorWithDiacritics() throws Exception {
+    void testAuthorWithDiacritics() throws Exception {
         // given
         BibEntry localEntry = new BibEntry(StandardEntryType.Article);
-        localEntry.setCiteKey("Grazulis2017");
+        localEntry.setCitationKey("Grazulis2017");
         localEntry.setField(StandardField.YEAR, "2017");
         localEntry.setField(StandardField.AUTHOR, "Gražulis, Saulius and O. Kitsune");
         localEntry.setField(StandardField.PAGES, "726--729");
 
         List<String> extensions = Collections.singletonList("pdf");
 
-        List<Path> dirs = Collections.singletonList(Paths.get(FILES_DIRECTORY));
+        List<Path> dirs = Collections.singletonList(Path.of(FILES_DIRECTORY));
         RegExpBasedFileFinder fileFinder = new RegExpBasedFileFinder("**/[year]_[auth]_[firstpage]\\\\.[extension]", ',');
 
         // when
         List<Path> result = fileFinder.findAssociatedFiles(localEntry, dirs, extensions);
+        List<Path> expected = Collections.singletonList(Path.of("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/directory/subdirectory/2017_Gražulis_726.pdf"));
 
         // then
-        assertEquals(Collections.singletonList(Paths.get("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/directory/subdirectory/2017_Gražulis_726.pdf")),
-                result);
+        assertEquals(expected.size(), result.size());
+        for (int i = 0; i < expected.size(); i++) {
+            assertTrue(Files.isSameFile(expected.get(i), result.get(i)));
+        }
     }
 
     @Test
-    public void testFindFileInSubdirectory() throws Exception {
+    void testFindFileInSubdirectory() throws Exception {
         // given
         BibEntry localEntry = new BibEntry(StandardEntryType.Article);
-        localEntry.setCiteKey("pdfInSubdirectory");
+        localEntry.setCitationKey("pdfInSubdirectory");
         localEntry.setField(StandardField.YEAR, "2017");
 
         List<String> extensions = Collections.singletonList("pdf");
 
-        List<Path> dirs = Collections.singletonList(Paths.get(FILES_DIRECTORY));
-        RegExpBasedFileFinder fileFinder = new RegExpBasedFileFinder("**/[bibtexkey].*\\\\.[extension]", ',');
+        List<Path> dirs = Collections.singletonList(Path.of(FILES_DIRECTORY));
+        RegExpBasedFileFinder fileFinder = new RegExpBasedFileFinder("**/[citationkey].*\\\\.[extension]", ',');
 
         // when
         List<Path> result = fileFinder.findAssociatedFiles(localEntry, dirs, extensions);
 
         // then
-        assertEquals(Collections.singletonList(Paths.get("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/directory/subdirectory/pdfInSubdirectory.pdf")),
+        assertEquals(Collections.singletonList(Path.of("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/directory/subdirectory/pdfInSubdirectory.pdf")),
                 result);
     }
 
     @Test
-    public void testFindFileNonRecursive() throws Exception {
+    void testFindFileNonRecursive() throws Exception {
         // given
         BibEntry localEntry = new BibEntry(StandardEntryType.Article);
-        localEntry.setCiteKey("pdfInSubdirectory");
+        localEntry.setCitationKey("pdfInSubdirectory");
         localEntry.setField(StandardField.YEAR, "2017");
 
         List<String> extensions = Collections.singletonList("pdf");
 
-        List<Path> dirs = Collections.singletonList(Paths.get(FILES_DIRECTORY));
-        RegExpBasedFileFinder fileFinder = new RegExpBasedFileFinder("*/[bibtexkey].*\\\\.[extension]", ',');
+        List<Path> dirs = Collections.singletonList(Path.of(FILES_DIRECTORY));
+        RegExpBasedFileFinder fileFinder = new RegExpBasedFileFinder("*/[citationkey].*\\\\.[extension]", ',');
 
         // when
         List<Path> result = fileFinder.findAssociatedFiles(localEntry, dirs, extensions);
@@ -142,7 +145,7 @@ public class RegExpBasedFileFinderTests {
     }
 
     @Test
-    public void testExpandBrackets() {
+    void testExpandBrackets() {
 
         assertEquals("", RegExpBasedFileFinder.expandBrackets("", entry, database, ','));
 
