@@ -3,7 +3,6 @@ package org.jabref.model.strings;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 
 import org.junit.jupiter.api.Test;
@@ -18,10 +17,10 @@ class StringUtilTest {
 
     @Test
     void StringUtilClassIsSmall() throws Exception {
-        Path path = Paths.get("src", "main", "java", StringUtil.class.getName().replace('.', '/') + ".java");
+        Path path = Path.of("src", "main", "java", StringUtil.class.getName().replace('.', '/') + ".java");
         int lineCount = Files.readAllLines(path, StandardCharsets.UTF_8).size();
 
-        assertTrue(lineCount <= 756, "StringUtil increased in size to " + lineCount + ". "
+        assertTrue(lineCount <= 761, "StringUtil increased in size to " + lineCount + ". "
                 + "We try to keep this class as small as possible. "
                 + "Thus think twice if you add something to StringUtil.");
     }
@@ -298,6 +297,11 @@ class StringUtilTest {
     void testReplaceSpecialCharacters() {
         assertEquals("Hallo Arger", StringUtil.replaceSpecialCharacters("Hallo Arger"));
         assertEquals("aaAeoeeee", StringUtil.replaceSpecialCharacters("åÄöéèë"));
+    }
+
+    @Test
+    void replaceSpecialCharactersWithNonNormalizedUnicode() {
+        assertEquals("Modele", StringUtil.replaceSpecialCharacters("Modèle"));
     }
 
     @Test
